# Raytracer

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/: Engine.cpp  World.cpp  main.cpp
